# Hlab

./: .gitignore
Glang/: CMakeLists.txt  main.cc
Glang/driver/: driver.cc  driver.hh
Glang/node/: node.cc  node.hh
Glang/parser/: lexer.l  parser.y
Glang/std/: lib.cc  lib.hh
Glang/tests/: break.gg  draw.gg  fib.gg  final.gg  func.gg  if.gg  init_world.gg  main.gg  neighbors_count.gg  nested_loop.gg  swap.gg  update.gg  varAssign.gg
cellular_automaton/: main.ll
cellular_automaton/src/: draw.cpp  main.c
codegen/: CMakeLists.txt  codegen.cpp
codegen/test/: CA  Makefile  main.ll
compiler/examples/cellular_automaton/: CA  Makefile  Readme.md  draw.cpp  draw.h  ir.ll  main.c
compiler/examples/cellular_automaton/codegen/: CMakeLists.txt  codegen.cpp
